Fusion-Qa-Final/src/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>BizDev Lead Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Contacted</fullName>
        </values>
        <values>
            <fullName>Converted</fullName>
        </values>
        <values>
            <fullName>Expired</fullName>
        </values>
        <values>
            <fullName>Not Contacted</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Not Qualified</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Business Dev</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Account Open</fullName>
        </values>
        <values>
            <fullName>Expired</fullName>
        </values>
        <values>
            <fullName>Not Contacted</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Not Converted - Disqualified</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Dealer</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Account Open</fullName>
        </values>
        <values>
            <fullName>Expired</fullName>
        </values>
        <values>
            <fullName>Not Contacted</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Not Converted - Disqualified</fullName>
        </values>
        <values>
            <fullName>RSM Review</fullName>
        </values>
        <values>
            <fullName>VP Review</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Fundraising Lead Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Contacted</fullName>
        </values>
        <values>
            <fullName>Converted</fullName>
        </values>
        <values>
            <fullName>Expired</fullName>
        </values>
        <values>
            <fullName>Not Contacted</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Not Qualified</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Outfitters</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Contacted</fullName>
        </values>
        <values>
            <fullName>Converted</fullName>
        </values>
        <values>
            <fullName>Expired</fullName>
        </values>
        <values>
            <fullName>Not Contacted</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Not Qualified</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Outside Sales Lead Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Contacted</fullName>
        </values>
        <values>
            <fullName>Converted</fullName>
        </values>
        <values>
            <fullName>Expired</fullName>
        </values>
        <values>
            <fullName>Not Contacted</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Not Qualified</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Account_Tier__c</fullName>
        <label>Account Tier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Basecamp</fullName>
                </value>
                <value>
                    <fullName>Summit</fullName>
                </value>
                <value>
                    <fullName>Landmark</fullName>
                </value>
                <value>
                    <fullName>Trailhead</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approve__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approve</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approved_by_VP_of_Sales__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved by VP of Sales</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Are_you_a_member_of_the_ASI_or_other_pro__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Are you a member of the ASI or other pro</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Are_you_a_reseller_Yes_No__c</fullName>
        <label>Are you a reseller? (Yes / No)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Area_Population__c</fullName>
        <label>Area Population</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0 - 5,000</fullName>
                </value>
                <value>
                    <fullName>5,001 - 25,000</fullName>
                </value>
                <value>
                    <fullName>25,001 - 75,000</fullName>
                </value>
                <value>
                    <fullName>75,001 - 200,000</fullName>
                </value>
                <value>
                    <fullName>200,001+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Brief_Description_of_the_event__c</fullName>
        <label>Brief Description of the event</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Buying_Group__c</fullName>
        <label>Buying Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ACE</fullName>
                </value>
                <value>
                    <fullName>DIB</fullName>
                </value>
                <value>
                    <fullName>Ferguson</fullName>
                </value>
                <value>
                    <fullName>Mid States</fullName>
                </value>
                <value>
                    <fullName>NBS</fullName>
                </value>
                <value>
                    <fullName>Sports Inc</fullName>
                </value>
                <value>
                    <fullName>TrueValue</fullName>
                </value>
                <value>
                    <fullName>Worldwide</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Grassroots</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Central_Biller_Text__c</fullName>
        <formula>IF(Number_of_Dealers_Near__c &gt; 0,TEXT( Number_of_Dealers_Near__c),&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Central Biller</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Central_Biller__c</fullName>
        <label>Central Biller</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Color1__c</fullName>
        <label>Color1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Color2__c</fullName>
        <label>Color2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Color3__c</fullName>
        <label>Color3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Email__c</fullName>
        <label>Company Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Competitors__c</fullName>
        <label>Competitors</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Brute</fullName>
                </value>
                <value>
                    <fullName>Canyon</fullName>
                </value>
                <value>
                    <fullName>Engel</fullName>
                </value>
                <value>
                    <fullName>Grizzly</fullName>
                </value>
                <value>
                    <fullName>Ice Hole</fullName>
                </value>
                <value>
                    <fullName>Igloo</fullName>
                </value>
                <value>
                    <fullName>K2</fullName>
                </value>
                <value>
                    <fullName>Orca</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Pelican</fullName>
                </value>
                <value>
                    <fullName>RTIC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Converted_from_Lead__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Mapped to Contact to determine if Contact was created from a Lead.</description>
        <label>Converted from Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Group__c</fullName>
        <label>Customer Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard Dealer</fullName>
                </value>
                <value>
                    <fullName>OEM</fullName>
                </value>
                <value>
                    <fullName>Hybrid</fullName>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
                <value>
                    <fullName>Custom Logo Dealer</fullName>
                </value>
                <value>
                    <fullName>Customer Logo Direct</fullName>
                </value>
                <value>
                    <fullName>Custom Logo Fundraiser</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Industry__c</fullName>
        <description>Cust Industry Field to carry over to Accounts Object</description>
        <inlineHelpText>CLOTH - Clothing/Apparel
FARM - Farm &amp; Ranch
GOVT - Government
HARD - Hardware
INDUS - Industrial
LUMBER - Lumber
MARINE - Marine/Boating
MED - Medical
OTHER
PROMO - Promotional
SPORT - Sporting Goods
TRUCK - Automotive Truck Aftermarket</inlineHelpText>
        <label>Customer Industry</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CLOTH</fullName>
                </value>
                <value>
                    <fullName>FARM</fullName>
                </value>
                <value>
                    <fullName>GOVT</fullName>
                </value>
                <value>
                    <fullName>HARD</fullName>
                </value>
                <value>
                    <fullName>INDUS</fullName>
                </value>
                <value>
                    <fullName>LUMBER</fullName>
                </value>
                <value>
                    <fullName>MARINE</fullName>
                </value>
                <value>
                    <fullName>MED</fullName>
                </value>
                <value>
                    <fullName>OTHER</fullName>
                </value>
                <value>
                    <fullName>PROMO</fullName>
                </value>
                <value>
                    <fullName>SPORT</fullName>
                </value>
                <value>
                    <fullName>TRUCK</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_of_Event__c</fullName>
        <label>Date of Event</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Denial_Reason__c</fullName>
        <label>Denial Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Denied__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Denied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disqualification_Reason__c</fullName>
        <label>Disqualification Reason</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Drinkware_Products__c</fullName>
        <inlineHelpText>Please select Which Drinkware Products are you interested in?</inlineHelpText>
        <label>Drinkware Products</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>RAMBLER 20 OZ. TUMBLER</fullName>
                </value>
                <value>
                    <fullName>RAMBLER 30 OZ. TUMBLER</fullName>
                </value>
                <value>
                    <fullName>RAMBLER 10 OZ. LOWBALL</fullName>
                </value>
                <value>
                    <fullName>RAMBLER COLSTER</fullName>
                </value>
                <value>
                    <fullName>RAMBLER 18 OZ. BOTTLE</fullName>
                </value>
                <value>
                    <fullName>RAMBLER 26 OZ. BOTTLE</fullName>
                </value>
                <value>
                    <fullName>RAMBLER 36 OZ. BOTTLE</fullName>
                </value>
                <value>
                    <fullName>RAMBLER HALF GALLON JUG</fullName>
                </value>
                <value>
                    <fullName>RAMBLER GALLON JUG</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EDI_Store_Number__c</fullName>
        <description>Store Number aka EDI Store/Billing Number</description>
        <inlineHelpText>This is the store number or billing number used by billing groups. (i.e. Ace Hardware, TrueValue &amp; Do It Best)</inlineHelpText>
        <label>EDI Store Number</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ecommerce_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ecommerce Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Subject__c</fullName>
        <label>Email Subject</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Estimated_Total_Annual_Revenue__c</fullName>
        <label>Estimated Total Annual Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>First_Activity_Date__c</fullName>
        <label>Latest Activity Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Flagged_reason__c</fullName>
        <label>Flagged reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Inappropriate Language</fullName>
                </value>
                <value>
                    <fullName>Additional Information Needed</fullName>
                </value>
                <value>
                    <fullName>Order Status Update</fullName>
                </value>
                <value>
                    <fullName>General Inquiry</fullName>
                </value>
                <value>
                    <fullName>License Approval Needed</fullName>
                </value>
                <value>
                    <fullName>Not a Non-profit</fullName>
                </value>
                <value>
                    <fullName>Inappropriate Languague</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fund_raising_documents_available__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fund-raising documents available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gear_Accessories__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Gear &amp; Accessories</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hard_Side_Cooler_Products__c</fullName>
        <description>HARD-SIDE COOLER PRODUCT(S)</description>
        <inlineHelpText>WHICH HARD-SIDE COOLER PRODUCT(S) ARE YOU INTERESTED IN?</inlineHelpText>
        <label>Hard-Side Cooler Products</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ROADIE 20</fullName>
                </value>
                <value>
                    <fullName>TUNDRA 35</fullName>
                </value>
                <value>
                    <fullName>TUNDRA 45</fullName>
                </value>
                <value>
                    <fullName>TUNDRA 65</fullName>
                </value>
                <value>
                    <fullName>TANK 85</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hardware_Affiliation__c</fullName>
        <label>Hardware Affiliation</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hopper_Actual_Quantity__c</fullName>
        <inlineHelpText>MINIMUM OF 15 UNITS</inlineHelpText>
        <label>Hopper Actual Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hopper_Color__c</fullName>
        <label>Hopper Color</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FOG GRAY / TAHOE BLUE</fullName>
                </value>
                <value>
                    <fullName>FIELD TAN / BLAZE ORANGE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hopper_Logo__c</fullName>
        <label>Hopper Logo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hopper_Unit_Quantity__c</fullName>
        <defaultValue>&quot;Please Select From Dropdown&quot;</defaultValue>
        <description>HOPPER UNIT QUANTITY</description>
        <label>Hopper Unit Quantity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>15-24</fullName>
                </value>
                <value>
                    <fullName>25-49</fullName>
                </value>
                <value>
                    <fullName>50+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hopper__c</fullName>
        <label>Hopper</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <label>Image</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Industry_Category__c</fullName>
        <label>Industry Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ACTION SPORTS</fullName>
                </value>
                <value>
                    <fullName>FARM/FLEET/GENERAL</fullName>
                </value>
                <value>
                    <fullName>HOME/HARDWARE</fullName>
                </value>
                <value>
                    <fullName>HUNT/FISH</fullName>
                </value>
                <value>
                    <fullName>INDOOR/OUTDOOR LIVING</fullName>
                </value>
                <value>
                    <fullName>OTHER RETAIL</fullName>
                </value>
                <value>
                    <fullName>OUTDOOR RECREATION</fullName>
                </value>
                <value>
                    <fullName>SPORTING GOODS</fullName>
                </value>
                <value>
                    <fullName>CLOSED</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>MOTOR VEHICLE</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>OEM</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Industry_Sub_Category__c</fullName>
        <label>Industry Sub Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Industry_Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AFTERMARKET ACCESSORIES</fullName>
                </value>
                <value>
                    <fullName>APPAREL/SHOES</fullName>
                </value>
                <value>
                    <fullName>AUTO/MOTO/MARINE/RV DEALER</fullName>
                </value>
                <value>
                    <fullName>AUTO/MOTO/MARINE/RV MFG</fullName>
                </value>
                <value>
                    <fullName>AUTO/RV</fullName>
                </value>
                <value>
                    <fullName>BARBEQUE</fullName>
                </value>
                <value>
                    <fullName>COLLEGIATE/BOOKSTORE</fullName>
                </value>
                <value>
                    <fullName>FLY FISHING SPECIALTY</fullName>
                </value>
                <value>
                    <fullName>FOOD/BEVERAGE</fullName>
                </value>
                <value>
                    <fullName>GENERAL STORE</fullName>
                </value>
                <value>
                    <fullName>GIFTING/BOUTIQUE</fullName>
                </value>
                <value>
                    <fullName>GOLF/COUNTRY CLUB</fullName>
                </value>
                <value>
                    <fullName>GROCERY/LIQUOR</fullName>
                </value>
                <value>
                    <fullName>GUN/ARCHERY/HUNTING SUPPLY</fullName>
                </value>
                <value>
                    <fullName>HARDWARE</fullName>
                </value>
                <value>
                    <fullName>HOME FURNITURE/FIXTURES</fullName>
                </value>
                <value>
                    <fullName>HUNT AND FISH</fullName>
                </value>
                <value>
                    <fullName>INDUSTRIAL MATERIALS/SUPPLY</fullName>
                </value>
                <value>
                    <fullName>LAND/WATER POWERSPORTS</fullName>
                </value>
                <value>
                    <fullName>LIVESTOCK/PET SUPPLY</fullName>
                </value>
                <value>
                    <fullName>MARINE/MARINA</fullName>
                </value>
                <value>
                    <fullName>MILITARY/POLICE</fullName>
                </value>
                <value>
                    <fullName>ORIGINAL EQUIPMENT MANUFACTURER</fullName>
                </value>
                <value>
                    <fullName>OUTDOOR GENERAL</fullName>
                </value>
                <value>
                    <fullName>POOL/PATIO/FIRE</fullName>
                </value>
                <value>
                    <fullName>PROMO GOODS</fullName>
                </value>
                <value>
                    <fullName>RECREATIONAL</fullName>
                </value>
                <value>
                    <fullName>ROD/BAIT/TACKLE</fullName>
                </value>
                <value>
                    <fullName>SPORTING GOODS</fullName>
                </value>
                <value>
                    <fullName>SURF/SKATE/SKI/PADDLE/BIKE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interest_Online__c</fullName>
        <label>Interest to Sell Online? List Website</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Interested_Product_Information__c</fullName>
        <label>Interested Product Information</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Drinkware</fullName>
                </value>
                <value>
                    <fullName>Soft-Coolers</fullName>
                </value>
                <value>
                    <fullName>Hard-Coolers</fullName>
                </value>
                <value>
                    <fullName>Gear</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invoice_Preference__c</fullName>
        <label>Invoice Preference</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Mail</fullName>
                </value>
                <value>
                    <fullName>Mail &amp; Email</fullName>
                </value>
                <value>
                    <fullName>EDI</fullName>
                </value>
                <value>
                    <fullName>Do Not Send</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_the_org_non_profit__c</fullName>
        <label>Is the org non-profit?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item1__c</fullName>
        <label>Item1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DrinkWare</fullName>
                </value>
                <value>
                    <fullName>Soft-Cooler</fullName>
                </value>
                <value>
                    <fullName>Hard-Cooler</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Assigned_by_State__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lead Assigned by State</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Assigned_by_Zip_Code__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lead Assigned by Zip Code</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Assignment_Rule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead Assignment Rule</label>
        <referenceTo>Lead_Assignment_Rule__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead_Category__c</fullName>
        <label>Lead Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Promotional Goods</fullName>
                </value>
                <value>
                    <fullName>Green grass</fullName>
                </value>
                <value>
                    <fullName>Collegiate</fullName>
                </value>
                <value>
                    <fullName>Licensed product</fullName>
                </value>
                <value>
                    <fullName>Premco</fullName>
                </value>
                <value>
                    <fullName>Large Opps. &amp; Partnerships</fullName>
                </value>
                <value>
                    <fullName>Conservation</fullName>
                </value>
                <value>
                    <fullName>Fundraising General</fullName>
                </value>
                <value>
                    <fullName>Corporate</fullName>
                </value>
                <value>
                    <fullName>Individual</fullName>
                </value>
                <value>
                    <fullName>BizDev</fullName>
                </value>
                <value>
                    <fullName>Fundraising</fullName>
                </value>
                <value>
                    <fullName>Outfitters</fullName>
                </value>
                <value>
                    <fullName>Outside Sales</fullName>
                </value>
                <value>
                    <fullName>Default Lead</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Industry_Category__c</fullName>
        <label>Lead Industry Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Farm/Fleet</fullName>
                </value>
                <value>
                    <fullName>Golf</fullName>
                </value>
                <value>
                    <fullName>Home/Hardware</fullName>
                </value>
                <value>
                    <fullName>Motor Vehicle</fullName>
                </value>
                <value>
                    <fullName>OEM</fullName>
                </value>
                <value>
                    <fullName>Other Retail</fullName>
                </value>
                <value>
                    <fullName>Outdoor</fullName>
                </value>
                <value>
                    <fullName>Sporting Goods</fullName>
                </value>
                <value>
                    <fullName>Action Sports</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Sub_Category__c</fullName>
        <label>Lead Sub Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Lead_Category__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Promotional Goods</fullName>
                </value>
                <value>
                    <fullName>Green grass</fullName>
                </value>
                <value>
                    <fullName>Collegiate</fullName>
                </value>
                <value>
                    <fullName>Licensed product</fullName>
                </value>
                <value>
                    <fullName>Premco</fullName>
                </value>
                <value>
                    <fullName>Large Opps. &amp; Partnerships</fullName>
                </value>
                <value>
                    <fullName>Conservation</fullName>
                </value>
                <value>
                    <fullName>Fundraising General</fullName>
                </value>
                <value>
                    <fullName>Corporate</fullName>
                </value>
                <value>
                    <fullName>Individual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LeadconversionRT__c</fullName>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LeadconversionRT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_documents_available__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Legal documents available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Logo_Only_Dealer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Logo Only Dealer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Multiple_Locations__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Multiple Locations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name_of_the_organization__c</fullName>
        <label>Name of the organization</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_profit_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non-profit Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Dealers_Near__c</fullName>
        <label>Number of Dealers Near</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Rooftops__c</fullName>
        <label>Number of Rooftops</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Organization_s_charitable_purpose__c</fullName>
        <label>Organization&apos;s charitable purpose</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>